2013-11-21  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-additional-identities): New.
	(gnus-icalendar-identities): Support additional-identities.

2013-11-21  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-event:org-timestamp): Fix
	org-timestamp for events ending at midnight.

2013-11-21  Ivan Shmakov  <ivan@siamics.net>  (tiny change)

	* nndoc.el (nndoc-type-alist, nndoc-debbugs-db-type-p): Support debbugs
	.log files.

2013-11-20  David Engster  <deng@randomsample.de>

	* lpath.el: Fix XEmacs warning for `beginning-of-visual-line'.

2013-11-20  Dave Goldberg  <david.goldberg6@verizon.net>

	* message.el (message-beginning-of-line):
	Use beginning-of-visual-line when visual-line-mode is turned on.

2013-11-15  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-event->gnus-calendar)
	(gnus-icalendar-event-from-ical)
	(gnus-icalendar-event->org-entry)
	(gnus-icalendar--update-org-event): Required/optional participation,
	list of attendees synced to org.

2013-11-13  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-event:sync-to-org)
	(gnus-icalendar-event:inline-org-buttons): Allow for appointment
	cancellations to be synced to org if the original appt has an org
	outline.

2013-11-13  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar--format-summary-line)
	(gnus-icalendar-event->org-entry)
	(gnus-icalendar--update-org-event)
	(gnus-icalendar-event->gnus-calendar): Fix empty location handling.

2013-11-12  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-event-from-ical):
	Fix timezone handling in gnus-icalendar export to org.

2013-11-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-salt.el (gnus--let-eval): Silence the Buildbot.

2013-11-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-cite.el (gnus-cite-add-face): Make non-sticky overlays.

2013-10-30  Glenn Morris  <rgm@gnu.org>
